--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,22 +11,69 @@ body {
 }
 
 .maincontainer {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  border: 1px solid #000;
+  padding: 20px 0;
+  align-self: center;
+  width: 70%;
+  margin: 0 auto;
+  background: green;
 }
 
 label {
   padding: 10px 0;
 }
 
+.bill,
+.payment {
+  width: 200px;
+}
+
 input {
   padding: 10px;
 }
 
+.change_btn {
+  display: flex;
+  justify-content: center;
+}
+
 .submit {
-  width: 100px;
-  margin: 30px auto;
+  margin-top: 30px;
+  padding: 10px 25px;
+  cursor: pointer;
+}
+
+.cid {
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  width: 70px;
+}
+
+.my_cid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
+  background: red;
+}
+
+h3 {
+  padding: 20px 0;
+  text-align: center;
+}
+
+.display-currency-notes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
+  background:yellow;
+}
+
+.display {
+  text-align: center;
 }
