--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -10,19 +10,33 @@ body {
 
 }
 
+h1 {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+hr {
+  width: 85%;
+  margin: 0 auto;
+  height: 1px;
+  background-color: #000000f5;
+  border: none;
+}
+
 .all-iterms {
   width: 70%;
   margin: 10px auto;
-  border: 1px solid black;
+  border-radius: 10px;
+  background: #7b5a08a2;
+  box-shadow: 0 5px 7px 0 #222020;
 }
 
 .my-cid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* width: 70%; */
   margin: 0 auto;
-  background: red;
 }
 
 .cid {
@@ -30,17 +44,23 @@ body {
   flex-direction: column;
 }
 
+#currency-nodes {
+  padding: 10px 0;
+  width: 65%;
+  display: flex;
+  justify-content: center;
+  margin: 10px auto;
+}
+
 .maincontainer {
   padding: 20px 0;
-  /* width: 70%; */
   margin: 0 auto;
-  background: green;
 }
 
 #form {
   width: 70%;
   margin: 0 auto;
-  /* background-color: orange; */
+  padding: 0 20px;
 }
 
 label {
@@ -65,6 +85,7 @@ input {
   margin-top: 30px;
   padding: 10px 25px;
   cursor: pointer;
+  color: #7b5b08;
 }
 
 .input {
@@ -72,12 +93,11 @@ input {
 }
 
 .display-text {
-  /* width: 70%; */
   margin: 0 auto;
 }
 
 h3 {
-  padding: 20px 0;
+  padding-top: 25px;
   text-align: center;
 }
 
@@ -87,9 +107,26 @@ h3 {
   justify-content: center;
   width: 100%;
   margin: 0 auto;
-  background:yellow;
 }
 
 .display {
   text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .all-iterms {
+    width: 96vw;
+  }
+
+  #form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .name,
+  .pay,
+  .bill,
+  .payment {
+    margin: 0 auto;
+  }
 }
