--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,6 +27,7 @@ hr {
 .all-iterms {
   width: 70%;
   margin: 10px auto;
+  padding: 15px 0;
   border-radius: 10px;
   background: #7b5a08a2;
   box-shadow: 0 5px 7px 0 #222020;
