--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -100,6 +100,13 @@ input {
   margin: 0 auto;
 }
 
+.negative {
+  text-align: center;
+  font-size: 20px;
+  color: red;
+  font-style: italic;
+}
+
 h3 {
   padding: 25px 0 15px 0;
   text-align: center;
