--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -59,7 +59,10 @@ hr {
 }
 
 #form {
-  width: 69%;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
   margin: 0 auto;
   padding: 0 20px;
 }
